# cortex-test

./: Cargo.toml
.github/workflows/: ci.yml
arm/: .gitignore  Cargo.toml  README.md
arm/.cargo/: config
arm/src/: lib.rs  main.rs
cortex-quickstart/: Cargo.toml
cortex-quickstart/.cargo/: config.toml
cortex-quickstart/src/: main.rs
src/: main.rs
testsuite/: Cargo.toml  memory.x
testsuite/minitest/: Cargo.toml
