[package]
authors = ["The Cortex-M Team <cortex-m@teams.rust-embedded.org>"]
name = "testsuite"
publish = false
edition = "2018"
version = "0.1.0"

[features]
rtt = ["rtt-target", "minitest/rtt"]
semihosting = ["cortex-m-semihosting", "minitest/semihosting"]

[dependencies]
# cortex-m-rt.path = "../cortex-m-rt"
# cortex-m.path = ".."
cortex-m-rt = "0.7.1"
cortex-m = "0.7.4"
minitest = { path = "minitest" }
critical-section = "1.0.0"

[dependencies.rtt-target]
version = "0.3.1"
optional = true

[dependencies.cortex-m-semihosting]
# path = "../cortex-m-semihosting"
version = "0.5.0"
optional = true
